--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,3 +18,15 @@ body {
 ::-webkit-scrollbar-thumb {
     @apply bg-gray-300 rounded-sm
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
